fix nested overlay area not fullscreen and slots visible on fullscreen mode

--- a/src/components/dialog/_dialog.scss
+++ b/src/components/dialog/_dialog.scss
@@ -154,6 +154,10 @@ $dialogMaxWidthMap: (
       transform: translate3d(0, 0, 0);
       opacity: 1;
     }
+
+    &--no-transform {
+      transform: none;
+    }
   }
 
   &__header {
